修复顶点ID和边类型的展示效果

--- a/hubble-fe/src/components/graph-management/metadata-configs/vertex-type/NewVertexType.less
+++ b/hubble-fe/src/components/graph-management/metadata-configs/vertex-type/NewVertexType.less
@@ -47,22 +47,29 @@
 }
 
 // retrive from parent since drawer doesn't hangs on body element
-.new-vertex-type-options-colors {
-  margin-left: 12px;
+.new-vertex-type-options-colors {  
+  margin-right: 12px;
 }
 
-.new-vertex-type-options-color {
+.new-vertex-type-options-color {   
   width: 20px;
   height: 20px;
+  line-height: 20px;
 }
 
 // override
-.new-vertex-type-options .new-vertex-type-options-color {
-  margin-top: 6px;
+.new-vertex-type-options .new-vertex-type-options-color {  
+  margin-top: 5px;
 }
 
-.new-fc-one-select-dropdown-menu-container .new-vertex-type-options-color {
+.new-fc-one-select-dropdown-menu-container .new-vertex-type-options-color {  
   width: 20px;
   height: 20px;
-  margin: 6px auto;
+  margin: auto;
+}
+
+.new-fc-one-select-dropdown-menu-container {  
+  width: 200px;
+  // background-color: white;
+  // box-shadow: -1px 1px 1px white;
 }
