修复一些已知bug

--- a/hubble-fe/src/components/graph-management/metadata-configs/MetadataConfigs.less
+++ b/hubble-fe/src/components/graph-management/metadata-configs/MetadataConfigs.less
@@ -138,11 +138,7 @@
 }
 
 .metadata-title {
-  font-family:
-    'PingFangSC-Medium',
-    'Microsoft YaHei',
-    '微软雅黑',
-    Arial,
+  font-family: 'PingFangSC-Medium', 'Microsoft YaHei', '微软雅黑', Arial,
     sans-serif;
   font-weight: bold;
   font-size: 16px;
