修复v1.2.1遗留已知bug

--- a/hubble-fe/src/components/graph-management/metadata-configs/vertex-type/NewVertexType.less
+++ b/hubble-fe/src/components/graph-management/metadata-configs/vertex-type/NewVertexType.less
@@ -52,6 +52,12 @@
 }
 
 .new-vertex-type-options-color {
+  width: 23px;
+  height: 23px;
+  line-height: 23px;
+}
+
+.new-vertex-type-select {
   width: 20px;
   height: 20px;
   line-height: 20px;
@@ -66,11 +72,15 @@
 }
 
 .new-vertex-type-options-no-border:hover {
-  border: #f5f6f5 solid 2px;
+  border: #f5f5f5 solid 2px;
 }
 
 // override
-.new-vertex-type-options .new-vertex-type-options-color {
+// .new-vertex-type-options .new-vertex-type-options-color {
+//   margin-top: 5px;
+// }
+
+.new-vertex-type-options {
   margin-top: 5px;
 }
 
@@ -79,6 +89,10 @@
   height: 14px;
   margin: auto;
 }
+
+// .aaaaaaa {
+//   background-color: '#fff';
+// }
 
 /**
  * Colors
@@ -1273,6 +1287,12 @@ input[type='file'] > input[type='button']::-moz-focus-inner {
   display: block;
   padding: 0 8px;
 }
+
+// .new-fc-one-select-another-dropdown-menu-item[type='custom'] {
+//   position: relative;
+//   display: block;
+//   padding: 8px;
+// }
 
 .new-fc-one-select-another-dropdown-menu-item {
   position: relative;
