--- a/hubble-fe/src/components/graph-management/data-analyze/DataAnalyze.less
+++ b/hubble-fe/src/components/graph-management/data-analyze/DataAnalyze.less
@@ -210,10 +210,16 @@
     }
   }
 
+  .query-tab-algorithm-wrapper,
   .query-tab-content-wrapper {
     padding: 16px;
     background: #fff;
     border-radius: 3px 3px 3px 3px;
+  }
+
+  .query-tab-algorithm-wrapper {
+    // min-width: 1220px;
+    overflow: auto;
   }
 
   .query-tab-content {
@@ -459,6 +465,7 @@
       border-right: 1px solid #e0e0e0;
       display: flex;
       flex-direction: column;
+      overflow-y: auto;
 
       &-options {
         width: 61px;
@@ -612,6 +619,14 @@
 
         & > img {
           margin-bottom: 10px;
+        }
+
+        & > span {
+          display: block;
+          width: 80%;
+          text-align: center;
+          max-height: 200px;
+          overflow: auto;
         }
       }
     }
